force-app/main/default/objects/ConsumerTraitResearch__c/ConsumerTraitResearch__c.object-meta.xml
<CustomObject>
    <label>Consumer Trait Research</label>
    <nameField>
        <label>Consumer Trait Research Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Trait Research</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>