force-app/main/default/objects/ConsumerTraitResearch__c/fields/eMailAddress__c.field-meta.xml
<CustomField>
    <fullName>eMailAddress__c</fullName>
    <label>eMail Address</label>
    <type>Email</type>
</CustomField>