force-app/main/default/objects/ConsumerTraitResearch__c/fields/IncomeBracket__c.field-meta.xml
<CustomField>
    <fullName>IncomeBracket__c</fullName>
    <label>Income Bracket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>