force-app/main/default/objects/ConsumerTraitResearch__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Consumer Trait Research</relationshipLabel>
    <relationshipName>Consumer_Trait_Research</relationshipName>
    <type>Lookup</type>
</CustomField>