force-app/main/default/objects/ConsumerTraitResearch__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Consumer Trait Research</relationshipLabel>
    <relationshipName>Consumer_Trait_Research</relationshipName>
    <type>Lookup</type>
</CustomField>