force-app/main/default/objects/ConsumerTraitResearch__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Consumer Trait Research</relationshipLabel>
    <relationshipName>Consumer_Trait_Research</relationshipName>
    <type>Lookup</type>
</CustomField>