force-app/main/default/objects/ConsumerTraitResearch__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>No idea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>