force-app/main/default/objects/ConsumerTraitResearch__c/fields/ReceiveNewsletter__c.field-meta.xml
<CustomField>
    <fullName>ReceiveNewsletter__c</fullName>
    <label>Receive Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>