force-app/main/default/objects/ConsumerTraitResearch__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Consumer Trait Research</relationshipLabel>
    <relationshipName>Consumer_Trait_Research</relationshipName>
    <type>Lookup</type>
</CustomField>