force-app/main/default/objects/ConsumerTraitResearch__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Consumer Trait Research</relationshipLabel>
    <relationshipName>Consumer_Trait_Research</relationshipName>
    <type>Lookup</type>
</CustomField>